--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,4 +1,5 @@
 $color: #930025;
+$color2: #b80021;
 $gray-light: #f2f2f2;
 $gray-light-gray-text: #7f8081;
 
@@ -205,7 +206,10 @@ header
 
             &.margin-negative-top 
             {
-              margin-top: -15px;
+               @include breakpoint(sm) {
+                     margin-top: -15px;
+                }
+                     
             }
             // @media screen and (max-width: 768px) {
             //   width: 50%;
@@ -239,13 +243,21 @@ header
 .grid
 {
     max-width: 95%;
-    width: 1000px;
+    width: calc(1000px + 1.333%);
     //height: 500px;
     //background: red;
     margin: auto;
     float: none;
     padding: 0;
     overflow: auto;
+
+    @include breakpoint(md) {
+       max-width: 97%;
+    }
+
+    @include breakpoint(sm) {
+       max-width: 95%;
+    }
 }
 
 .container 
@@ -256,14 +268,23 @@ header
 }
 
 a.event{
-  width: 32%;
-  margin-right: 2%;
+  width: 31.33332%;
+  margin-right: 1%;
+  margin-left: 1%;
   float: lefT;
   margin-bottom: 30px;
   cursor: pointer;
+  overflow: visible;
 
   @include breakpoint(md) {
      margin-bottom: 15px;
+     width: 48%;
+  }
+
+  @include breakpoint(sm) {
+    margin-right: 0;
+    margin-left: 0;
+    width: 100%;
   }
 
   &:hover 
@@ -271,29 +292,29 @@ a.event{
     opacity: 0.85;
   }
 
-  @media screen and (max-width: 768px) {
-    width: 49%;
+  // @media screen and (max-width: 768px) {
+  //   width: 49%;
 
-    &:nth-child(2n+2)
-    {
-      margin-right: 0 !important;
-    }
-  }
+  //   &:nth-child(2n+2)
+  //   {
+  //     margin-right: 0 !important;
+  //   }
+  // }
 
-  @media screen and (max-width:500px) {
-    width: 100%;
+  // @media screen and (max-width:500px) {
+  //   width: 100%;
 
-   margin-right: 0 !important;
-  }
+  //  margin-right: 0 !important;
+  // }
 
-  &:nth-child(3n+3)
-  {
-    margin-right: 0;
+  // &:nth-child(3n+3)
+  // {
+  //   //margin-right: 0;
 
-    @media screen and (max-width: 768px) {
-      margin-right: 2%;
-    }
-  }
+  //   @media screen and (max-width: 768px) {
+  //     margin-right: 2%;
+  //   }
+  // }
 
   .card { width: auto; }
 }
@@ -309,6 +330,8 @@ a.event{
 {
   height: 380px;
   position: relative;
+  overflow: visible !important;
+
 
   @include breakpoint(sm) {
     display: block !important;
@@ -531,11 +554,12 @@ footer
       float: left;
       padding: 25px 35px;
       z-index: 10;
+      overflow: hidden;
       //position: fixed;
       // bottom: 16px;
       // right: 16px;
       width: 49%;
-      height: 330px;
+      min-height: 330px;
       border: 1px solid #F7F7F7;
       background: white;
       border-radius: 2px;
@@ -764,10 +788,29 @@ footer
 
     &.mixitup-control-active
     {
-      background: $color;
+      background: $color !important;
     
       color: white;
     }
+  }
+}
+
+.error-message
+{
+  width: 1000px;
+  max-width: 90%;
+  margin: auto;
+  text-align: center;
+  padding: 30px 0 30px 0;
+  margin-bottom: 50px;
+  //border: 1px solid $color2;
+  background: lighten($color2, 50%);
+
+  .reset-filters 
+  {
+    background: $color2 !important;
+
+    i { margin-top: -2px; }
   }
 }
 
