--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,6 +11,10 @@
 @import "barbarian_reset.scss"; /*Boxes settings*/    
 @import "base.scss";
 @import "typography.scss";
-@import "layout.scss";
+@import "header.scss";
+@import "hello-form.scss";
+@import "grid.scss";
+@import "footer.scss";
+@import "elements.scss";
 @import "shame.scss";   
    
