--- a/index.html.twig
+++ b/index.html.twig
@@ -10,31 +10,56 @@
 		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 		})(window,document,'script','dataLayer','GTM-TQ2B8Q');</script>
 		<!-- End Google Tag Manager -->
+
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">-->
-		<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
+			
 		<link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css" />
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/getmdl-select.min.css" />
-		
-		<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>-->
-		<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/plugins/TextPlugin.min.js"></script>-->
-		<!--<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>-->
-		<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>-->
-		
-		
-		
 
-
-		
-
+		<script id="event-template" type="text/x-handlebars-template">
+		{% verbatim %}
+			{{#each post}}
+				<a href="#" class="event premium y2018">
+					<div class="card card-wide mdl-card mdl-shadow--2dp" card-url="https://www.letemps.ch">
+						<div class="card-header mdl-card__title" style="background: url('img/article/berthollet.jpg')">
+							<span class="card-chip mdl-chip">
+							    <span class="card-chip__text mdl-chip__text">Premium</span>
+							</span>
+							<div class="card-overlay">
+								<h1 class="card-title mdl-card__title-text style="background: url('img/article/berthollet.jpg')>Concert des soeur Berthollet 2</h1>
+							</div>
+							
+						</div>
+						<div class="card-desc mdl-card__supporting-text">
+							<span class="card-meta"><span class""card-meta--date>13 février 2018</span><span class="card-meta--tag">#concert</span></span>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							Mauris sagittis pellentesque lacus eleifend lacinia...
+						</div>
+						<div class="card-footer mdl-card__supporting-text">
+							Rédaction du Temps, <b>Lausanne</b>
+							<button id="card-share-menu-i" class="share-menu mdl-button mdl-js-button mdl-button--icon">
+							  <i class="material-icons">share</i>
+							</button>
+							<ul class="grid--event--share mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect share-menu--content"
+							    data-mdl-for="card-share-menu-i">
+							  <li class="mdl-menu__item">Facebook</li>
+							  <li class="mdl-menu__item">Twitter</li>
+							  <li class="mdl-menu__item">Linkedin</li>
+							</ul>
+						</div>
+					</div>
+				</a>
+			{{/each}}
+		{% endverbatim %}
+		</script>
 	</head>  
  
 	<body style="padding-top: {{ navBarOffset }};">
+		<div class="overlay"></div>
 
 		<!-- Google Tag Manager (noscript) -->
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TQ2B8Q"
@@ -47,10 +72,6 @@
 					<img class="header-top--logo" src="img/article/logo-t.svg" alt="">
 					<h2 class="header-top--title">Événements</h2>
 				</div>
-
-				<!-- <button class="back-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-					Retour au site du Temps
-				</button> -->
 
 				<div class="back-to-letemps">
 					<a href="https://www.letemps.ch" target="_blank">
@@ -81,120 +102,79 @@
 		<main>
 			<div class="hello-form">
 				<h2 class="hello-form--punchline">Trouvez votre prochain rendez-vous</h2>
-				<div class="hello-form--filters-wrapper">
-
-
+				<form class="hello-form--filters-wrapper">
+					<button hidden class="reset "type="reset">reset</button>
 
 					<div class="hello-form--filters-wrapper--box ">
-						
-							<form action="#">
-								<button hidden class="reset "type="reset">reset</button>
-								<fieldset data-filter-group data-logic="and">
-							  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-							    <input class="mdl-textfield__input" type="text" id="sample3" data-search-attribute="class">
-							    <label class="mdl-textfield__label" for="sample3"><i class="material-icons">search</i><span style="position: absolute; top: 2px;">Rechercher un terme</span></label>
-							  </div>
-							  </fieldset>
-							</form>
-						
+							<fieldset data-filter-group data-logic="and">
+						    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+						    <input class="mdl-textfield__input" type="text" id="sample3" data-search-attribute="class">
+						    <label class="mdl-textfield__label" for="sample3"><i class="material-icons">search</i><span style="position: absolute; top: 2px;">Rechercher un terme</span></label>
+						    </div>
+						  </fieldset>
 					</div>
-
+				
 					<div class="hello-form--filters-wrapper--box ">
-						<form>
-							<button hidden class="reset "type="reset">reset</button>
-							<fieldset data-filter-group="category" data-logic="and">
-								<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-							        <input type="text" value="" class="mdl-textfield__input" id="filter-place" readonly>
-							        <input type="hidden" value="" name="filter-place">
-							        <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-							        <label for="filter-place" class="mdl-textfield__label">Catégorie</label>
-							        <ul for="filter-place" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-							        	<li hidden class="mdl-menu__item" data-filter=""></li>
-							            <li class="mdl-menu__item mdl-menu__item--full-bleed-divider" data-filter="">Toutes</li>
-							            <li class="mdl-menu__item" data-filter=".concert">Concert</li>
-							            <li class="mdl-menu__item" data-filter=".forum">Forum</li>
-							            <li class="mdl-menu__item" data-filter=".rencontre">Rencontre</li>
-							        </ul>
-							    </div>
-						    </fieldset>
-						</form>
+						<fieldset data-filter-group="category" data-logic="and">
+							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
+						        <input type="text" value="" class="mdl-textfield__input" id="filter-place" readonly>
+						        <input type="hidden" value="" name="filter-place">
+						        <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+						        <label for="filter-place" class="mdl-textfield__label">Catégorie</label>
+						        <ul for="filter-place" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+						        	<li hidden class="mdl-menu__item" data-filter=""></li>
+						            <li class="mdl-menu__item mdl-menu__item--full-bleed-divider" data-filter="">Toutes</li>
+						            <li class="mdl-menu__item" data-filter=".concert">Concert</li>
+						            <li class="mdl-menu__item" data-filter=".forum">Forum</li>
+						            <li class="mdl-menu__item" data-filter=".rencontre">Rencontre</li>
+						        </ul>
+						    </div>
+					    </fieldset>
+					</div>
+				
+					<div class="hello-form--filters-wrapper--box margin-negative-top">
+						<fieldset data-filter-group="subscription" data-logic="and">
+							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
+						        <input type="text" value="" class="mdl-textfield__input" id="filter-category" readonly>
+						        <input type="hidden" value="" name="filter-category">
+						        <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+						        <label for="filter-category" class="mdl-textfield__label">Premium</label>
+						        <ul for="filter-category" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+						        	<li hidden class="mdl-menu__item" data-filter=""></li>
+						            <li class="mdl-menu__item mdl-menu__item--full-bleed-divider" data-val="cat-all" data-filter="">Tous</li>
+						            <li class="mdl-menu__item" data-filter=".premium">Oui</li>
+						            <li class="mdl-menu__item" data-filter=".free">Non</li>
+						        </ul>
+						    </div>
+						</fieldset>
 					</div>
 
 					<div class="hello-form--filters-wrapper--box margin-negative-top">
-						<form>
-							<button hidden class="reset "type="reset">reset</button>
-							<fieldset data-filter-group="subscription" data-logic="and">
-								<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-							        <input type="text" value="" class="mdl-textfield__input" id="filter-category" readonly>
-							        <input type="hidden" value="" name="filter-category">
-							        <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-							        <label for="filter-category" class="mdl-textfield__label">Premium</label>
-							        <ul for="filter-category" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-							        	<li hidden class="mdl-menu__item" data-filter=""></li>
-							            <li class="mdl-menu__item mdl-menu__item--full-bleed-divider" data-val="cat-all" data-filter="">Tous</li>
-							            <li class="mdl-menu__item" data-filter=".premium">Oui</li>
-							            <li class="mdl-menu__item" data-filter=".free">Non</li>
-							        </ul>
-							    </div>
-							    <!-- cd-filter-content -->
-							</fieldset>
-						</form>
+						<fieldset data-filter-group="year" data-logic="and">
+							<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
+						        <input type="text" value="" class="mdl-textfield__input" id="filter-subtype" readonly>
+						        <input type="hidden" value="" name="filter-subtype">
+						        <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+						        <label for="filter-subtype" class="mdl-textfield__label">Année</label>
+						        <ul for="filter-subtype" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+						            <li hidden class="mdl-menu__item" data-filter=""></li>
+						            <li class="mdl-menu__item mdl-menu__item--full-bleed-divider" data-filter="">Toutes</li>
+						            <li class="mdl-menu__item" class="y2018" data-filter=".y2018">2018</li>
+						            <li class="mdl-menu__item" data-filter=".y2017">2017</li>
+						            <li class="mdl-menu__item" data-filter=".y2016">2016</li>
+						            <li class="mdl-menu__item" data-filter=".y2015">2015</li>
+						        </ul>
+						    </div>
+						</fieldset>
 					</div>
-
-					<div class="hello-form--filters-wrapper--box margin-negative-top">
-						<form>
-							<button hidden class="reset "type="reset">reset</button>
-							<fieldset data-filter-group="year" data-logic="and">
-								<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-							        <input type="text" value="" class="mdl-textfield__input" id="filter-subtype" readonly>
-							        <input type="hidden" value="" name="filter-subtype">
-							        <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-							        <label for="filter-subtype" class="mdl-textfield__label">Année</label>
-							        <ul for="filter-subtype" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-							            <li hidden class="mdl-menu__item" data-filter=""></li>
-							            <li class="mdl-menu__item mdl-menu__item--full-bleed-divider" data-filter="">Toutes</li>
-							            <li class="mdl-menu__item" class="y2018" data-filter=".y2018">2018</li>
-							            <li class="mdl-menu__item" data-filter=".y2017">2017</li>
-							            <li class="mdl-menu__item" data-filter=".y2016">2016</li>
-							            <li class="mdl-menu__item" data-filter=".y2015">2015</li>
-							        </ul>
-							    </div>
-								<!-- cd-filter-content -->
-							</fieldset>
-						</form>
-					</div>
-					<!-- <div class="hello-form--filters-wrapper--box ">
-						<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-					        <input type="text" value="" class="mdl-textfield__input" id="filter-subtype" readonly>
-					        <input type="hidden" value="" name="filter-subtype">
-					        <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-					        <label for="filter-subtype" class="mdl-textfield__label">Terminés</label>
-					        <ul for="filter-subtype" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-					            <li class="mdl-menu__item mdl-menu__item--full-bleed-divider" data-val="cat-all">Tous</li>
-					            <li class="mdl-menu__item" data-val="cat-pomme">Oui</li>
-					            <li class="mdl-menu__item" data-val="cat-poire">Non</li>
-					        </ul>
-					    </div>
-					</div>
-					<div class="hello-form--filters-wrapper--box ">
-						<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-					        <input type="text" value="" class="mdl-textfield__input" id="filter-subtype" readonly>
-					        <input type="hidden" value="" name="filter-subtype">
-					        <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-					        <label for="filter-subtype" class="mdl-textfield__label">Année</label>
-					        <ul for="filter-subtype" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-					            <li class="mdl-menu__item" data-val="cat-pomme">2018</li>
-					            <li class="mdl-menu__item" data-val="cat-pomme">2017</li>
-					            <li class="mdl-menu__item" data-val="cat-pomme">2016</li>
-					        </ul>
-					    </div>
-					</div> -->
-				</div>
+				</form>
 			</div>
 
 			<div class="grid">
 
-				<a href="#" class="event free y2018">
+				
+
+				<!-- <a href="#" class="event free y2018">
 					<div class="card card-wide mdl-card mdl-shadow--2dp" card-url="https://www.letemps.ch">
 						<div class="card-header mdl-card__title" style="background: url('img/article/berthollet.jpg')">
 							<span class="card-chip mdl-chip">
@@ -663,7 +643,7 @@
 							</ul>
 						</div>
 					</div>
-				</a>
+				</a> -->
 
 			</div>
 
@@ -673,6 +653,7 @@
 					<i class="material-icons">close</i>&nbsp;Réinitialiser tous les filtres
 				</button>
 			</div>
+
 			<div class="mixitup-page-list-trigger"></div>
 			<div class="mixitup-page-list is-pinned"></div>
 
@@ -681,28 +662,6 @@
 		<footer>
 			<div class="footer-top">
 				<div class="container">
-
-					<!-- <div class="newsletter">
-						<div class="newsletter--header">
-							<img src="img/article/thumb-newsletter-events.jpg" alt="" class="newsletter--header--img">
-							<span class="newsletter--header--title">Newsletter Événements</span>
-						</div>
-						<div class="newsletter--body">
-							<span class="newsletter--body--text">
-								<b>GRATUIT</b><br>Restez informés des évènements organisés par la rédaction.
-							</span>
-							<form action="#" class="newsletter--body--email">
-							  <div class="mdl-textfield mdl-js-textfield" style="width: 100%;">
-							    <input class="mdl-textfield__input" type="text" id="sample2" style="text-align: center;">
-							    <label class="mdl-textfield__label" for="sample2" style="text-align: center;">Votre email</label>
-							  </div>
-							</form>
-							<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-								Soumettre
-							</button>
-						</div>
-					</div> -->
-
 					<div class="newsletter">
 						<div class="newsletter--header">
 							<img src="img/article/thumb-newsletter-events.jpg" alt="" class="newsletter--header--img">
@@ -793,6 +752,7 @@
 					
 				</div>
 			</div>
+
 			<div class="footer-bottom">
 				<div class="container">
 
@@ -805,10 +765,6 @@
 						</ul>
 				</div>
 			</div>
-
-
-			
-
 		</footer>
 		
 		
@@ -816,6 +772,9 @@
 		<script src="assets/js/getmdl-select.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
+		
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 		<script src="assets/js/mixitup.min.js"></script>
 		<script src="assets/js/mixitup-pagination.min.js"></script>
