--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -85,6 +85,8 @@
     background: #58b59a;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to top right, #749e92, #2be2ad);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to top right, #749e92, #2be2ad); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    &.premium-is-0 { display: none; visibility: hidden; }
 
     @include breakpoint(sm) {
       left: 0;
